# xr_multi_gpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bin2inl.py
include/: App.hpp  Instance.hpp  Matrix.hpp  Options.hpp  RenderTarget.hpp  Renderer.hpp  Scene.hpp  SimpleTimingProfiler.hpp  StereoProjection.hpp  TriangleMesh.hpp  UserInputSink.hpp  UserInterface.hpp  VulkanAppProfiler.hpp  VulkanImageResource.hpp  VulkanQueueFamily.hpp  Window.hpp  WindowUserInterface.hpp  XrUserInterface.hpp  shaders.hpp  xrmg.hpp
shaders/: layeredMesh.slang  perlin.h
src/: App.cpp  Instance.cpp  Matrix.cpp  Options.cpp  RenderTarget.cpp  Renderer.cpp  Scene.cpp  SimpleTimingProfiler.cpp  StereoProjection.cpp  TriangleMesh.cpp  VulkanAppProfiler.cpp  VulkanImageResource.cpp  VulkanQueueFamily.cpp  Window.cpp  WindowUserInterface.cpp  XrUserInterface.cpp  main.cpp
